--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,22 @@
     </nav>
   </header>
   <main>
+    <section class="profile">
+      <main>
+          <img alt="A picture of me!" class="profile"
+               src="./assets/me3.jpg"/>
+          <p>Hi, I’m Barbara! I’ve been calling London home for the past 10 years, 
+            a city that inspires me to reinvent myself constantly. 
+            Creativity flows through everything I do—whether I’m painting, 
+            curating my wardrobe, or bringing beauty to the little things in everyday life. 
+            I find joy in the small moments and believe in expressing 
+            who you are through every detail of your world. 
+          </p>
+          <p>
+            Let’s explore this journey together—join me!
+          </p>
+      </main>
+  </section>
     <section class="signposts">
       <header>
         <h2>what you can find here...</h2>
